Migrated build, removed tasker (for now)